turning in reading journal for day 1

--- a/day1_reading_journal.ipynb
+++ b/day1_reading_journal.ipynb
@@ -26,6 +26,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Chapter 1 Notes\n",
+    "\n",
+    "Syntax: made up of token and structure\n",
+    "* tokens = datatypes (strings, ints, floats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise 1.2\n",
     "\n",
     "Start the Python interpreter and use it as a calculator. Python’s syntax for math operations is almost the same as standard mathematical notation. For example, the symbols +, - and / denote addition, subtraction and division, as you would expect. The symbol for multiplication is *.\n",
@@ -37,18 +47,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2562"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(42*60) + 42 # seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.211180124223602"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10/1.61 # miles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "412.482"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((42*60) + 42)/(10/1.61) # seconds per mile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24748.920000000002"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((42*60) + 42)/(10/1.61))/60 # minutes per mile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.727653570337614"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/(((((42*60) + 42)/(10/1.61))/60)/60) # mph"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 2 Notes\n",
+    "Expression vs. Statement\n",
+    "* Expression is evaluated\n",
+    "* Statement results in action\n",
+    "\n",
+    "Errors\n",
+    "* Syntax error: structure/rules of programming language broken, script will refuse to run\n",
+    "* Runtime error: does not appear until after program is running\n",
+    "* Semantic error: error in meaning, does not generate error, but does not do right thing"
    ]
   },
   {
@@ -79,7 +205,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. 8.5, float\n",
+    "2. 8.5, float\n",
+    "3. 4.0, float\n",
+    "4. 11, int\n",
+    "5. '.....', string"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,12 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "523.3333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 5\n",
+    "v = (4/3)*3.14*r**3\n",
+    "\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,18 +260,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "646.8000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "coverPrice = 24.95\n",
+    "storeDiscount = .4\n",
+    "numBooks = 60\n",
+    "firstShip = 3\n",
+    "shippingCost = .75\n",
+    "\n",
+    "wholesaleCost = numBooks*(coverPrice*storeDiscount) + firstShip + numBooks*shippingCost\n",
+    "\n",
+    "print(wholesaleCost)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "If I leave my house at 6:52 am and run 1 mile at an easy pace (8:15 per mile), then 3 miles at tempo (7:12 per mile) and 1 mile at easy pace again, what time do I get home for breakfast? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7:30am\n"
+     ]
+    }
+   ],
+   "source": [
+    "distance1 = 1\n",
+    "distance2 = 3\n",
+    "\n",
+    "pace1 = (8*60 + 15)/60 # minutes/mi\n",
+    "pace2 = (7*60 + 12)/60 # minutes/mi\n",
+    "\n",
+    "time1 = distance1*pace1 # minutes\n",
+    "time2 = distance2*pace2 # minutes\n",
+    "\n",
+    "time = 2*time1 + time2 # minutes\n",
+    "\n",
+    "hours = 6\n",
+    "minutes = 52 + int(time)\n",
+    "if minutes >= 60:\n",
+    "    minutes = minutes-60\n",
+    "    hours = hours + 1\n",
+    "\n",
+    "print(str(hours) + ':' + str(minutes) + 'am')"
    ]
   },
   {
@@ -158,12 +357,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                 monty\n"
+     ]
+    }
+   ],
+   "source": [
+    "def right_justify(string):\n",
+    "    '''puts the last letter of string in column 70 of display'''\n",
+    "    space = ' '\n",
+    "    placement = 70\n",
+    "    justification = placement - len(string)\n",
+    "    \n",
+    "    print(justification*space + string)\n",
+    "    \n",
+    "right_justify('monty')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,12 +426,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - - + - - - -  +\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "+ - - - - + - - - -  +\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "|         |          |\n",
+      "+ - - - - + - - - -  +\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print2x2():\n",
+    "    print(('+ ' + '- '*4)*2, '+')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('+ ' + '- '*4)*2, '+')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('|' + ' '*9)*2, '|')\n",
+    "    print(('+ ' + '- '*4)*2, '+')\n",
+    "    \n",
+    "print2x2()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,18 +475,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - - + - - - - + - - - - + - - - -  +\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "+ - - - - + - - - - + - - - - + - - - -  +\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "+ - - - - + - - - - + - - - - + - - - -  +\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "+ - - - - + - - - - + - - - - + - - - -  +\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "|         |         |         |          |\n",
+      "+ - - - - + - - - - + - - - - + - - - -  +\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printGrid4Rows(columns, rows):\n",
+    "    for i in range(rows):\n",
+    "        print(('+ ' + '- '*4)*columns, '+')\n",
+    "        for j in range(4):\n",
+    "            print(('|' + ' '*9)*columns, '|')\n",
+    "    print(('+ ' + '- '*4)*columns, '+')\n",
+    "\n",
+    "printGrid4Rows(4,4)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Chapter 5.1 - 5.7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 5 Notes\n",
+    "\n",
+    "Floor division (//): divides two numbers and runds down to an integer\n",
+    "ex/ 30//4 = 7\n",
+    "\n",
+    "Modulus operature (%): finds remainder, also used to extract right-most digits\n",
+    "ex/ x % 10 yields last digit in base 10, x % 100 last two digits"
    ]
   },
   {
@@ -253,15 +554,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, that doesn't work\n",
+      "No, that doesn't work\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_fermat(a,b,c,n):\n",
+    "    '''checks if Fermat's theorem holds'''\n",
+    "    test = (a**n + b**n == c**n)\n",
+    "    if test and n > 2:\n",
+    "        print(\"Holy smokes, Fermat was wrong!\")\n",
+    "    else:\n",
+    "        print(\"No, that doesn't work\")\n",
+    "\n",
+    "check_fermat(3,4,5,2)\n",
+    "check_fermat(3,4,5,3)"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "2\\. Write a function that prompts the user to input values for $a$, $b$, $c$ and $n$, converts them to integers, and uses `check_fermat` to check whether they violate Fermat’s theorem."
@@ -269,12 +590,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type a: 3\n",
+      "Type b: 4\n",
+      "Type c: 5\n",
+      "Type n: 3\n",
+      "No, that doesn't work\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_fermat():\n",
+    "    '''checks if Fermat's theorem holds'''\n",
+    "    a = int(input(\"Type a: \"))\n",
+    "    b = int(input(\"Type b: \"))\n",
+    "    c = int(input(\"Type c: \"))\n",
+    "    n = int(input(\"Type n: \"))\n",
+    "    test = (a**n + b**n == c**n)\n",
+    "    if test and n > 2:\n",
+    "        print(\"Holy smokes, Fermat was wrong!\")\n",
+    "    else:\n",
+    "        print(\"No, that doesn't work\")\n",
+    "        \n",
+    "check_fermat()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,12 +637,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n",
+      "No\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_triangle(a,b,c):\n",
+    "    '''checks if shape with side lengths a, b, and c is a triangle'''\n",
+    "    test1 = (a + b) >= c\n",
+    "    test2 = (b + c) >= a\n",
+    "    test3 = (a + c) >= b\n",
+    "    test = test1 and test2 and test3\n",
+    "    if test:\n",
+    "        print('Yes')\n",
+    "    else:\n",
+    "        print('No')\n",
+    "        \n",
+    "is_triangle(1,2,3) # degenerate triangle\n",
+    "is_triangle(1,1,12) # not a triangle\n",
+    "is_triangle(2,3,4) # is a triangle"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,12 +678,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type Length 1: 1\n",
+      "Type Length 2: 1\n",
+      "Type Length 3: 12\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_triangle():\n",
+    "    a = int(input(\"Type Length 1: \"))\n",
+    "    b = int(input(\"Type Length 2: \"))\n",
+    "    c = int(input(\"Type Length 3: \"))\n",
+    "    is_triangle(a,b,c)\n",
+    "\n",
+    "check_triangle()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +715,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "About 90 minutes."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,7 +752,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
