maybe will actually commit? day3

--- a/day3_reading_journal.ipynb
+++ b/day3_reading_journal.ipynb
@@ -34,12 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "def backwards_string(string):\n",
+    "    '''prints letters of string backwards'''\n",
+    "    for i in range(1,len(string)+1):\n",
+    "        index = len(string) - i\n",
+    "        print(string[index])\n",
+    "\n",
+    "backwards_string('banana')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,12 +73,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True False\n",
+      "ananab orange\n",
+      "ananabay\n",
+      "oftwaresay oglethorpeay\n"
+     ]
+    }
+   ],
    "source": [
+    "def check_vowel(letter):\n",
+    "    list_vowels = ['a','e','i','o','u']\n",
+    "    for i in range(0, len(list_vowels)):\n",
+    "        if letter == list_vowels[i]:\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def first_to_last(word):\n",
+    "    '''appends first letter to end of word (unless first letter is vowel)'''\n",
+    "    first_letter = word[0]\n",
+    "    end_word = word[1:len(word)]\n",
+    "    if not check_vowel(first_letter):\n",
+    "        new_word = end_word + first_letter\n",
+    "    else:\n",
+    "        new_word = word\n",
+    "    return new_word\n",
+    "\n",
+    "def add_ay(word):\n",
+    "    '''adds \"ay\" to the end of word'''\n",
+    "    new_word = word + 'ay'\n",
+    "    return new_word\n",
+    "\n",
     "def pig_latin(word):\n",
     "    \"\"\"\n",
     "    Return given 'word' translated into Pig Latin\n",
@@ -65,12 +119,36 @@
     "    >>> pig_latin(\"software\")\n",
     "    'oftwaresay'\n",
     "    \"\"\"\n",
-    "    pass #TODO: Implement me\n",
+    "    first_to_last_word = first_to_last(word)\n",
+    "    new_word = add_ay(first_to_last_word)\n",
+    "    return new_word\n",
+    "\n",
+    "# Test for check_vowel, should return: True True True False\n",
+    "print(check_vowel('a'), check_vowel('u'), check_vowel('o'), check_vowel('z')) \n",
+    "\n",
+    "# Test for first_to_last, should return: ananab orange\n",
+    "print(first_to_last('banana'),first_to_last('orange'))\n",
+    "\n",
+    "# Test for add_ay, should return ananabay\n",
+    "print(add_ay(\"ananab\"))\n",
+    "\n",
+    "# Test for pig_latin, should return oftwaresay oglethorpeay\n",
+    "print(pig_latin('software'),pig_latin('oglethorpe'))\n",
     "\n",
     "# If you'd like to actually run the doctests here, you can uncomment the lines below.\n",
     "# We use this slightly more complex method to test only the pig_latin function, without running tests on any other functions that may be in this notebook.\n",
-    "#import doctest\n",
-    "#doctest.run_docstring_examples(pig_latin, globals())"
+    "import doctest\n",
+    "doctest.run_docstring_examples(pig_latin, globals())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 8.5 Notes\n",
+    "\n",
+    "Strings are **imutable**, meaning that characters cannot be changed by assignment.\n",
+    "* to get around this, you can, however, create new strings"
    ]
   },
   {
@@ -83,12 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count(letter, string):\n",
+    "    '''counts number of letter in string'''\n",
+    "    count = 0\n",
+    "    for x in string:\n",
+    "        if x == letter:\n",
+    "            count = count + 1\n",
+    "    return count\n",
+    "\n",
+    "# Test, should return 3 0\n",
+    "print(count('a', 'banana'), count('f', 'banana'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,12 +197,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normal     this is a great string    \n",
+      "stripped this is a great string\n",
+      "replacing i with y     thys ys a great stryng    \n",
+      "uper case     THIS IS A GREAT STRING    \n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "string = '    this is a great string    '\n",
+    "\n",
+    "print('normal', string)\n",
+    "print('stripped', string.strip())\n",
+    "print('replacing i with y', string.replace('i','y'))\n",
+    "print('uper case', string.upper())\n",
+    "sring "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,18 +236,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True False True\n"
+     ]
+    }
+   ],
    "source": [
     "def any_lowercase1(s):\n",
     "    for c in s:\n",
     "        if c.islower():\n",
     "            return True\n",
     "        else:\n",
-    "            return False"
+    "            return False\n",
+    "        \n",
+    "print(any_lowercase1('heLLo'), any_lowercase1('hELLO'), any_lowercase1('HELLo'), any_lowercase1('hELLo'))\n",
+    "\n",
+    "# checks if the first character is lowercase, becuase it returns a value in the first iteration of the loop"
    ]
   },
   {
@@ -157,7 +287,9 @@
     "        if 'c'.islower():\n",
     "            return 'True'\n",
     "        else:\n",
-    "            return 'False'"
+    "            return 'False'\n",
+    "\n",
+    "#checks if the string 'c' is lowercase, therefore always returns the string 'True'"
    ]
   },
   {
@@ -183,7 +315,9 @@
     "def any_lowercase3(s):\n",
     "    for c in s:\n",
     "        flag = c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "#checks if the last character is lowercase because it returns flag which is continually updated"
    ]
   },
   {
@@ -210,7 +344,9 @@
     "    flag = False\n",
     "    for c in s:\n",
     "        flag = flag or c.islower()\n",
-    "    return flag"
+    "    return flag\n",
+    "\n",
+    "# returns true if any of the characters are lowercase"
    ]
   },
   {
@@ -227,17 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False False False False\n"
+     ]
+    }
+   ],
    "source": [
     "def any_lowercase5(s):\n",
     "    for c in s:\n",
     "        if not c.islower():\n",
     "            return False\n",
-    "    return True"
+    "    return True\n",
+    "\n",
+    "print(any_lowercase5('hello'), any_lowercase5('hELLO'), any_lowercase5('HELLo'), any_lowercase5('hELLo'), any_lowercase5('HELLO'))\n",
+    "\n",
+    "# checks if all the letters in the string are "
    ]
   },
   {
@@ -272,7 +420,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Any type of item can be placed in a list!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,7 +434,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Similarities:\n",
+    "* both can be referred to by index\n",
+    "* both can include strings :P\n",
+    "* both index from 0!\n",
+    "\n",
+    "Differences:\n",
+    "* unlike strings, lists are mutable and can be changed with assignment"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,12 +455,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def average(list_numbers):\n",
+    "    '''calculates average of list of numbers'''\n",
+    "    total = 0\n",
+    "    for number in list_numbers:\n",
+    "        total = total + number\n",
+    "    return total/len(list_numbers)\n",
+    "\n",
+    "print(average([4,5,6]), average([4]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,22 +489,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kale burger\n",
+      "0\n",
+      "kale salad\n",
+      "1\n",
+      "kale ice cream\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['kale burger', 'kale salad', 'kale ice cream']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def add_ingredient(menu, ingredient):\n",
     "    \"\"\"\n",
-    "    Given a list of string 'menu' items and a trendy 'ingredient' string of the day,\n",
+    "    Given a list of strings 'menu' items and a trendy 'ingredient' string of the day,\n",
     "    return a new menu list of strings with the ingredient added to each.\n",
     "    \n",
     "    >>> add_ingredient([\"burger\", \"salad\", \"ice cream\"], \"kale\")\n",
     "    ['burger with kale', 'salad with kale', 'ice cream with kale']\n",
     "    \n",
     "    \"\"\"\n",
-    "    pass    # TODO: Implement me\n",
+    "    for item in menu:\n",
+    "        new_item = ingredient + ' ' + item\n",
+    "        index = menu.index(item)\n",
+    "        menu[index] = new_item\n",
+    "    return menu\n",
     "\n",
     "# Running doctests in jupyter notebook:\n",
     "# If you'd like to actually run the doctests here, you can uncomment the lines below.\n",
@@ -337,7 +539,8 @@
     "# without running tests on any other functions that may be in this notebook.\n",
     "\n",
     "#import doctest\n",
-    "#doctest.run_docstring_examples(add_ingredient, globals(), verbose=True)"
+    "#doctest.run_docstring_examples(add_ingredient, globals(), verbose=True)\n",
+    "add_ingredient([\"burger\", \"salad\", \"ice cream\"], \"kale\")"
    ]
   },
   {
@@ -351,7 +554,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "64 minutes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -393,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
