rj 4 without optional challange working

--- a/day4_reading_journal.ipynb
+++ b/day4_reading_journal.ipynb
@@ -34,12 +34,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def middle(input_list):\n",
+    "    '''returns list sans first and last elements\n",
+    "    >>> middle([1,2])\n",
+    "    []\n",
+    "    >>> middle([1,2,3])\n",
+    "    [2]\n",
+    "    '''\n",
+    "    end = len(input_list)\n",
+    "    new_list = input_list[1:end-1]\n",
+    "    return new_list\n",
+    "    \n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 10.4 Notes\n",
+    "List operations:\n",
+    "* concatenation: $[1,2] + [3,4] = [1,2,3,4]$\n",
+    "* repetition: $[1]*4 = [1,1,1,1]$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,17 +88,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def chop(a_list):\n",
+    "    '''removes first and last elements of list and returns None'''\n",
+    "    a_list = a_list[1:len(a_list)-1]\n",
+    "    return None\n",
+    "\n",
+    "a_list = [2,3,4]\n",
+    "chop(a_list)\n",
+    "print(a_list)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Chop doesn't have a return value, but it changes the value of a_list (the argument), or tries to. I have not observed its success and I have no idea why it would ever be useful. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +129,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count(letter, string):\n",
+    "    '''returns number of letter in the string\n",
+    "    >>> count('a','banana')\n",
+    "    3\n",
+    "    >>> count('a', 'dog')\n",
+    "    0\n",
+    "    '''\n",
+    "    count = 0\n",
+    "    for c in string:\n",
+    "        if c == letter:\n",
+    "            count = count + 1\n",
+    "    return count\n",
+    "\n",
+    "def is_anagram(string_1,string_2):\n",
+    "    '''returns True if string_1 and string_2 are anagrams\n",
+    "    >>> is_anagram('','')\n",
+    "    True\n",
+    "    >>> is_anagram('iamlordvoldemort','tommarvoloriddle')\n",
+    "    True\n",
+    "    >>> is_anagram('pencil','planet')\n",
+    "    False\n",
+    "    '''\n",
+    "    anagram = False\n",
+    "    count_1 = []\n",
+    "    count_2 = []\n",
+    "    counted = []\n",
+    "    i = 0\n",
+    "    for c in string_1:\n",
+    "        if c not in counted:\n",
+    "            count_1 = count_1 + [count(c,string_1)]\n",
+    "            count_2 = count_2 + [count(c,string_2)]\n",
+    "            i = i + 1\n",
+    "    if count_1 == count_2:\n",
+    "        anagram = True\n",
+    "    return anagram\n",
+    "    \n",
+    "     \n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,17 +202,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n",
+      "0.48\n",
+      "0.503\n",
+      "0.5009\n",
+      "0.50539\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=6)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest, random\n",
+    "\n",
+    "def count(i, a_list):\n",
+    "    '''returns number of i in a_list\n",
+    "    >>> count(1, [1,1,2,1])\n",
+    "    3\n",
+    "    >>> count(2, [1,1,1])\n",
+    "    0\n",
+    "    '''\n",
+    "    count = 0\n",
+    "    for n in a_list:\n",
+    "        if n == i:\n",
+    "            count = count + 1\n",
+    "    return count\n",
+    "\n",
+    "\n",
+    "def has_duplicates(a_list):\n",
+    "    '''returns True if a_list has any duplicates\n",
+    "    >>> has_duplicates([2,2,2])\n",
+    "    True\n",
+    "    >>> has_duplicates([2,3,4])\n",
+    "    False\n",
+    "    >>> has_duplicates([2,2,4,4])\n",
+    "    True\n",
+    "    '''\n",
+    "    duplicates = False\n",
+    "    for c in a_list:\n",
+    "        if count(c, a_list) >= 2:\n",
+    "            duplicates = True\n",
+    "    return duplicates\n",
+    "\n",
+    "def generate_sample(x):\n",
+    "    '''generates sample of x random birthdays\n",
+    "    >>> len(generate_sample(23))\n",
+    "    23\n",
+    "    '''\n",
+    "    sample = []\n",
+    "    for i in range(x):\n",
+    "        month = random.randint(1,12)\n",
+    "        if month == 2:\n",
+    "            len_month = 29\n",
+    "        elif month <= 7:\n",
+    "            if month%2 == 0:\n",
+    "                len_month = 30\n",
+    "            else:\n",
+    "                len_month = 31\n",
+    "        else:\n",
+    "            if month%2 == 0:\n",
+    "                len_month = 31\n",
+    "            else:\n",
+    "                len_month = 30\n",
+    "        day = random.randint(1,len_month)\n",
+    "        sample = sample + [str(month) + '/' + str(day)]\n",
+    "    return sample\n",
+    "\n",
+    "def test_prob(sample_size, samples):\n",
+    "    '''finds the experimental probability that two people have the same birthday in sample_size\n",
+    "    using samples number of samples\n",
+    "    \n",
+    "    '''\n",
+    "    tries = 0\n",
+    "    successes = 0\n",
+    "    for n in range(samples):\n",
+    "        sample = generate_sample(sample_size)\n",
+    "        if has_duplicates(sample):\n",
+    "            successes = successes + 1\n",
+    "        tries = tries + 1\n",
+    "    return successes/tries\n",
+    "\n",
+    "print(test_prob(23,10))\n",
+    "print(test_prob(23,100))\n",
+    "print(test_prob(23,1000))\n",
+    "print(test_prob(23,10000))\n",
+    "print(test_prob(23,100000))\n",
+    "    \n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The probability is about 50%"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +336,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 5, in __main__.bisect\n",
+      "Failed example:\n",
+      "    bisect(2, [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4])\n",
+      "Expected:\n",
+      "    1\n",
+      "Got:\n",
+      "    4\n",
+      "    not found, in 1st half\n",
+      "    4\n",
+      "    not found, in 1st half\n",
+      "    3\n",
+      "    not found, in 1st half\n",
+      "    2\n",
+      "    1 index\n",
+      "    found\n",
+      "    1\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 7, in __main__.bisect\n",
+      "Failed example:\n",
+      "    bisect(18, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
+      "Expected:\n",
+      "    17\n",
+      "Got:\n",
+      "    10\n",
+      "    not found, in 2nd half\n",
+      "    9 index\n",
+      "    15\n",
+      "    not found, in 2nd half\n",
+      "    13 index\n",
+      "    18\n",
+      "    15 index\n",
+      "    found\n",
+      "    15\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 9, in __main__.bisect\n",
+      "Failed example:\n",
+      "    bisect(19, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
+      "Expected:\n",
+      "    18\n",
+      "Got:\n",
+      "    10\n",
+      "    not found, in 2nd half\n",
+      "    9 index\n",
+      "    15\n",
+      "    not found, in 2nd half\n",
+      "    13 index\n",
+      "    18\n",
+      "    not found, in 2nd half\n",
+      "    15 index\n",
+      "    19\n",
+      "    found\n",
+      "    0\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 11, in __main__.bisect\n",
+      "Failed example:\n",
+      "    bisect (0, [1,2,3])\n",
+      "Expected:\n",
+      "    None\n",
+      "Got:\n",
+      "    2\n",
+      "    not found, in 1st half\n",
+      "    1\n",
+      "    not here\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 13, in __main__.bisect\n",
+      "Failed example:\n",
+      "    bisect (1, [1,2,3])\n",
+      "Expected:\n",
+      "    0\n",
+      "Got:\n",
+      "    2\n",
+      "    not found, in 1st half\n",
+      "    1\n",
+      "    found\n",
+      "    0\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   5 of   5 in __main__.bisect\n",
+      "***Test Failed*** 5 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=5, attempted=5)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "\n",
+    "def bisect(number, a_list):\n",
+    "    '''finds the index of number in the ordered a_list of ints\n",
+    "    >>> bisect(2, [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4])\n",
+    "    1\n",
+    "    >>> bisect(18, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
+    "    17\n",
+    "    >>> bisect(19, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19])\n",
+    "    18\n",
+    "    >>> bisect (0, [1,2,3])\n",
+    "    None\n",
+    "    >>> bisect (1, [1,2,3])\n",
+    "    0\n",
+    "    '''\n",
+    "    length = len(a_list)\n",
+    "    found = False\n",
+    "    index = 0\n",
+    "    while not found:\n",
+    "        length = len(a_list)\n",
+    "        new_length = length//2\n",
+    "        test_number = a_list[new_length]\n",
+    "        print(test_number)\n",
+    "        if length <= 1:\n",
+    "            if a_list[0] == number:\n",
+    "                index = 0\n",
+    "                found = True\n",
+    "                print('found')\n",
+    "                return index\n",
+    "            else: \n",
+    "                index = None\n",
+    "                found = True\n",
+    "                print('not here')\n",
+    "                return index\n",
+    "        else:\n",
+    "            if test_number == number:\n",
+    "                index = index + new_length\n",
+    "                print(index, 'index')\n",
+    "                found = True\n",
+    "                print('found')\n",
+    "                return index\n",
+    "            elif test_number >= number:\n",
+    "                a_list = a_list[0:new_length]\n",
+    "                print('not found, in 1st half')\n",
+    "            else:\n",
+    "                a_list = a_list[new_length+1:length]\n",
+    "                print('not found, in 2nd half')\n",
+    "                index = index + new_length\n",
+    "                print(index, 'index')\n",
+    "    return index\n",
+    "\n",
+    "\n",
+    "doctest.testmod()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,6 +503,13 @@
     "Have any comments on this Reading Journal? Feel free to leave them [here](https://goo.gl/forms/hZqCUAi4ir7hVN6x2) and we'll read them when you submit your journal entry. This could include suggestions to improve the exercises, topics you'd like to see covered in class next time, or other feedback.\n",
     "\n",
     "If you have Python questions or run into problems while completing the reading, you should post them to Piazza instead so you can get a quick response before your journal is submitted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I really don't get the chop function exercise. What is the point? Is it to show that the function doesn't do anything or does it actually do something that I'm missing?"
    ]
   }
  ],
@@ -165,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
